[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-game"
version = "0.1.0"
description = "A terminal-based memory game"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cryptography~=46.0.5",
    "pyfiglet~=1.0.2",
    "rich~=13.9.3",
    "rich_pixels==3.0.1",
    "textual~=0.84.0",
]

[project.scripts]
memory-game = "memory_game.app:main"

# This enables running with the config argument
[project.entry-points."console_scripts"]
memory-game = "memory_game.app:main"

[tool.setuptools.package-data]
memory_game = [
    "styles/*.tcss",
    "assets/images/*.png"
]

[tool.setuptools.packages.find]
where = ["src"]
